# AC-Shunt

./: .gitignore  package-lock.json  package.json
Backend/ac_shunt/: $corrections.xlsx  ac_shunt_backend.spec  correction_data.json  corrections.xlsx  db.sqlite3  entry_point.py  excel_to_json.py  load_json_to_db.py  manage.py  requirements.txt  uncertainty_data.json
Backend/ac_shunt/ac_shunt/: asgi.py  settings.py  urls.py  wsgi.py
Backend/ac_shunt/api/: __init__.py  admin.py  apps.py  consumers.py  db_routers.py  manage_corrections.py  mock_calibration_instruments.py  mock_instruments.py  models.py  outbox.py  routing.py  serializers.py  session_state.py  session_supervisor.py  signals.py  (+3 more)
Backend/ac_shunt/api/NPSL_Tools/: .gitignore  pyproject.toml  requirements.txt
Backend/ac_shunt/api/NPSL_Tools/instruments/: __init__.py  fluke_instrument.py  instrument_11713C.py  instrument_34420A.py  instrument_3458A.py  instrument_5730A.py  instrument_5790B.py  instrument_8100.py  instrument_ESP302.py
Backend/ac_shunt/api/NPSL_Tools/npsl_tools/enums/: 5790B_NIST_WB.json  792A_Angles.json  fluke_5790B.py
Backend/ac_shunt/api/NPSL_Tools/npsl_tools/instruments/: __init__.py  instrument.py  instrument_11713C.py  instrument_3458A.py  instrument_53132A.py  instrument_5730A.py  instrument_5790B.py  instrument_8100.py  utils.py
Frontend/ac-shunt-interface/: index.html  package-lock.json  package.json  vite.config.mjs
Frontend/icon_builder/: README.md  color_coin.py
Frontend/workbench/: index.html  package-lock.json  package.json  vite.config.mjs
docs/: adding-a-module.md
(+309 files in other folders)
