[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npsl_tools"
version = "0.1.8"
authors = [
    { name = "Benjamin Mo", email = "benjamin.j.mo.civ@us.navy.mil" }, { name = "Tevin Mak", email = "tevin.r.mak.civ@us.navy.mil" }, { name = "Barry Baker", email = "barry.t.baker2.civ@us.navy.mil" }, { name = "Sandy Wu", email = "sandy.s.wu2.civ@us.navy.mil" },
]
description = "Module for communicating with various measurement instruments using the PyVisa library."
requires-python = ">=3.7"
dependencies = [
    "pyvisa",
]

[tool.hatch.build.targets.wheel]
packages = ["npsl_tools"]